# flowders

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/flowders/: __init__.py  __main__.py  aggregator.py  broker.py  hashcheck.py  producer.py
